--- a/style/style.css
+++ b/style/style.css
@@ -80,7 +80,9 @@ body{
 
 #accueil_redirect{
     display: flex;
-    
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .img_accueil{
