--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,15 @@ body{
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
-
+#savoir_plus{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 42px;
+    width: auto;
+    background-color: #eae7e4;
+}
 #bandeau{
     display: flex;
     flex-direction: row;
@@ -40,6 +48,16 @@ body{
     padding-right: 30px;
     padding-left: 30px;
 }
+
+.titre{
+    display: flex;
+    flex-direction: row;
+    height: 72px;
+    align-items: center;
+    padding-right: 30px;
+    padding-left: 30px;
+}
+
 .name:hover{
     color: rgb(38, 80, 98);
     transition : 0.4s;
@@ -83,6 +101,8 @@ body{
     align-items: center;
     flex-direction: row;
     justify-content: center;
+    background-color: antiquewhite;
+    margin-bottom: 10px;
 }
 
 .img_accueil{
@@ -90,5 +110,29 @@ body{
     width: auto;
     padding-left: 10px;
     padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
+#second_bar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    height: 82px;
+    width: 100%;
+    color : #444444;
+    font-weight: bold;
+    border-bottom: 2px solid #e4e1e5;
+    border-top: 2px solid #e4e1e5;
+}
+
+.second_titre{
+    display: flex;
+    flex-direction: row;
+    height: 72px;
+    align-items: center;
+    padding-right: 30px;
+    padding-left: 30px;
+}
