--- a/pages/style.css
+++ b/pages/style.css
@@ -21,31 +21,39 @@ body{
     justify-content: center;
     align-items: center;
 }
-
+.lavender{background-color: #E6E6FA;}
 .banana{background-color: #F5EDBC;}
 .red{background-color: red;}
 .white{background-color: white;}
 .black{background-color: black;}
 .navy{background-color: navy;}
-.lime{background-color: lime;}
-.green{background-color: green;}
-.aqua{background-color: aqua;}
-.ocean{background-color: ocean;}
-.orchid{background-color: orchid;}
+.lime{background-color: #dee7b1;}
+.green{background-color: #43b870;}
+.aqua{background-color: #14b2ca;}
+.ocean{background-color: #12317c;}
+.orchid{background-color: #ab8dbb;}
 .citrus{background-color: #ECED96;}
-.cerulean{background-color: cerulean;}
-.blue{background-color: blue;}
+.cerulean{background-color: #333781;}
+.blue{background-color: #0157c2;}
 .pink{background-color: #F07AB4}
 .garnet{background-color: #833741;}
 .juice{background-color: #E364AE;}
 .charcoal{background-color: #A9A9A9;}
-.multi{background-image: url();}
+.multi{background-image: url("/Crocs/Other/multi.PNG");
+    background-size: contain;}
 .neon{background-color: #44207e;}
 .espresso{background-color: #79706e;}
-.pistachio{background-color:pistachio ;}
+.pistachio{background-color:#ccdae5 ;}
 .blossom{background-color: #d79a98;}
-.limeade{background-color: #1480a5;}
-.chai{background-color: chai;}
+.limeade{background-image: url("/Crocs/Other/limeade.PNG");
+    background-size: contain;}
+.chai{background-image: url("/Crocs/Other/chai.PNG");
+background-size: contain;}
+.denim{background-image: url("/Crocs/Other/denim.PNG");
+    background-size: contain;}
+
+
+
 .bone{background-color: #cec9b2;}
 .poppy{background-color: #d86b92;}
 .grey{background-color: grey;}
