--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,7 @@ body{
     height: 30px;
     width: 100%;
     color : white;
+    overflow: hidden;
 }
 
 #Menu_Crocs{
@@ -36,7 +37,6 @@ body{
     flex-direction: row;
     align-items: center;
     font-weight: bold;
-
 
 }
 
@@ -85,16 +85,14 @@ body{
     left: 88%;
 }
 
-#panier{
-    margin-left: 40px;
-    height: 35px;
-    width:35px;
-    background-image: url("/style/img/panier.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    position: absolute;
-    left: 93%;
+@media screen and (max-width: 800px){
+    #like{
+        display: none;
+    }
+
+    
 }
+
 
 #accueil_redirect{
     display: flex;
@@ -155,3 +153,25 @@ body{
 .petite_image:hover{
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
+
+#grande_deco{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+
+}
+#grande_image{
+    height: 65%;
+    width: 100%;
+}
+@media screen and (min-width: 1080px){
+    #grande_image{
+        height: 490px;
+        width: 1256px;
+
+    }
+}
+    
