--- a/style/style.css
+++ b/style/style.css
@@ -29,6 +29,10 @@ body{
     overflow: hidden;
 }
 
+
+    
+
+
 #Menu_Crocs{
     height: 72px;
     width: 100%;
@@ -38,6 +42,17 @@ body{
     align-items: center;
     font-weight: bold;
 
+}
+@media screen and (max-width: 946px) {
+    #Menu_Crocs{
+        height: 50px;
+
+    }
+}
+@media screen and (max-width: 946px) {
+    .titre{
+        display: none;
+    }
 }
 
 #promo{
@@ -85,13 +100,7 @@ body{
     left: 88%;
 }
 
-@media screen and (max-width: 800px){
-    #like{
-        display: none;
-    }
 
-    
-}
 
 
 #accueil_redirect{
@@ -100,12 +109,12 @@ body{
     flex-direction: row;
     justify-content: center;
     background-color: antiquewhite;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
 
 .img_accueil{
-    height: 50%;
-    width: 50%;
+    height: 364px;
+    width: 655px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 5px;
@@ -145,9 +154,16 @@ body{
 }
 
 .petite_image{
-    height: 100%;
-    width: 100%;
+    height: 182px;
+    width: 182px;
     border-radius: 5%;
+}
+@media screen and (max-width: 1148px) {
+    .petite_image{
+        height: 115px;
+        width: 115px;
+    }
+    
 }
 
 .petite_image:hover{
@@ -159,19 +175,26 @@ body{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 10px;
     margin-top: 20px;
+    
 
 }
 #grande_image{
-    height: 65%;
-    width: 100%;
-}
-@media screen and (min-width: 1080px){
-    #grande_image{
-        height: 490px;
-        width: 1256px;
+    background-image: url("/style/img/grande_deco.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 1200px;
+    height: 470px;
 
+}
+#grande_image:hover{
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+}
+
+
+@media screen and (max-width: 762px){
+    #grande_image{
+        background-image: url("/style/img/grande_deco_bis.webp");
     }
 }
     
