--- a/pages/style.css
+++ b/pages/style.css
@@ -116,6 +116,9 @@ background-size: contain;}
     position: absolute;
     left: 93%;
     z-index: 10;
+    cursor: pointer;
+    user-select: none;
+
 }
 .cart-ctn{
     background: #f5f5f5;
