--- a/style/style.css
+++ b/style/style.css
@@ -117,6 +117,8 @@ a{
     background-size: contain;
     position: absolute;
     left: 88%;
+    cursor: pointer;
+    user-select: none;
 }
 
 
@@ -236,6 +238,7 @@ a{
     color: white;
     height: 122px;
     width: 100%;
+    margin-top: 15px;
 }
 #bouton{
     display: flex;
@@ -452,3 +455,4 @@ a{
 .sous_exclu:hover{
     text-decoration: underline;
 }
+
