--- a/pages/style.css
+++ b/pages/style.css
@@ -129,13 +129,14 @@ background-size: contain;}
 .cart-ctn{
     background: #f5f5f5;
     position: absolute;
-    top: 0 ;
+    top: 144px ;
     right: -500px;
     width: 500px;
-    height: 100vh;
+    min-height: 100vh;
+    max-height: auto;
     max-width: 100vw;
     z-index: 9;
-    padding-top: 80px;
+    padding-top: 10px;
 }
 
 .open-cart{
@@ -146,8 +147,16 @@ background-size: contain;}
     display: flex;
     align-items: center;
     gap: 10px;
+    border-bottom: #000 1px solid;
+    padding-bottom: 10px;
+    height: auto;
+    margin: 10px;
+
 }
 .cart-croc-img{
     width: 75px;
     border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
