--- a/style/style.css
+++ b/style/style.css
@@ -461,6 +461,12 @@ a{
     align-items: center;
 }
 
+.test{
+    margin-top: 150px;
+    padding: 50px;
+    
+}
+
 #insta_img{
     height:24px;
     width: 24px;
@@ -571,3 +577,31 @@ a{
     text-decoration: underline;
 }
 
+#global{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.detailsCaroussel{
+    height: 583px;
+    width: 843px;
+    background-color: #fefefe;
+}
+
+.detailsInfo{
+    height: 477px;
+    width: 376px;
+}
+.carousselImg{
+    height: 547px;
+    width: 446px;
+
+
+}
+
+#carousselImg_size{
+    size: 100%;
+}
