--- a/style/style.css
+++ b/style/style.css
@@ -25,8 +25,7 @@ body{
     height: 48px;
     width: 100%;
     color : white;
-    overflow-wrap: break-word;
-    overflow: hidden    ;
+    overflow:hidden
     
     
 }
@@ -48,10 +47,12 @@ body{
 }
 
 #inscription{
+    position: absolute;
     display : flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    left: 30%;
     margin-left: 430px;
     border-right: #ffffff 3px solid;
     padding-right: 80px;
@@ -69,6 +70,8 @@ body{
 }
 
 #compte{
+    position: absolute;
+    left: 84.5%;
     display : flex;
     flex-direction: row;
     justify-content: center;
@@ -604,4 +607,9 @@ a{
 
 #carousselImg_size{
     size: 100%;
+
+}
+
+#poubelle{
+    
 }
