--- a/pages/style.css
+++ b/pages/style.css
@@ -10,6 +10,8 @@ body{
     margin: 10px 0;
     display: flex;
     gap:10px;
+    cursor: pointer;
+    
 }
 
 .round{
@@ -133,7 +135,7 @@ background-size: contain;}
     top: 144px ;
     right: -500px;
     width: 500px;
-    height: 100vh;
+    height: 590px;
     max-width: 100vw;
     z-index: 9;
     padding-top: 10px;
