--- a/style/style.css
+++ b/style/style.css
@@ -25,7 +25,7 @@ body{
     height: 48px;
     width: 100%;
     color : white;
-    overflow:hidden
+    overflow:hidden;
     
     
 }
@@ -60,6 +60,7 @@ body{
     height: 48px;
     cursor: pointer;
     user-select: none;
+    overflow: hidden;
     
 }
 
@@ -97,6 +98,18 @@ body{
 
 a{
     text-decoration: none;
+}
+
+.crocsDetails{
+    text-decoration: none;
+    color: #000000;
+    cursor: pointer;
+    user-select: none;
+}
+
+.crocsDetails:hover{
+    text-decoration: underline;
+    transition : 0.1s;
 }
     
 
@@ -464,11 +477,7 @@ a{
     align-items: center;
 }
 
-.test{
-    margin-top: 150px;
-    padding: 50px;
-    
-}
+
 
 #insta_img{
     height:24px;
@@ -583,9 +592,9 @@ a{
 #global{
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     gap: 10px;
+    margin-top: 141px;
 }
 
 .detailsCaroussel{
@@ -595,24 +604,163 @@ a{
 }
 
 .detailsInfo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 477px;
     width: 376px;
+    gap: 25px;
 }
+
+.detailsTitle{
+    font-size: large;
+    font-weight: bold;
+}
+
+.detailsPrice{
+    font-size: medium;
+    font-weight: bold;
+}
+
+.detailsColorName{
+    font-size: medium;
+}
+
+
+.ajout{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #000000;
+    color: white;
+    background-color: #000000;
+    border-radius: 5px;
+    padding: 3px;
+    cursor: pointer;
+    user-select: none;
+    transition : 0.4s;
+}
+
+.ajout:hover{
+    background-color: #ffffff;
+    color: black;
+    transition : 0.4s;
+}
+.vider{
+    position: relative;
+    left: 50%;
+    padding-top: 10px;
+    border: 2px solid #000000;
+    color: white;
+    background-color: #000000;
+    border-radius: 5px;
+    cursor: pointer;
+    user-select: none;
+}
+
+.vider:hover{
+    background-color: #ffffff;
+    color: black;
+    transition : 0.4s;
+}
+
+.confirmButton{
+    border: 2px solid #000000;
+    color: white;
+    background-color: #000000;
+    border-radius: 5px;
+    cursor: pointer;
+    user-select: none;
+    transition : 0.4s;
+}
+
+.confirmButton:hover{
+    margin-left: 10px;
+    background-color: #ffffff;
+    color: black;
+    transition : 0.4s;
+}
+
+
+.caroussel {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #e2dcdc;
+}
+
+.Arrow {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* background-color: green; */
+    height: auto;
+    width: 100px;
+    font-size: 50px;
+    cursor: pointer;
+    user-select: none;
+}
+
 .carousselImg{
-    height: 547px;
-    width: 446px;
+    height: 70%;
+    width: 70%;
+    background-color: #e2dcdc;
+    
+}
 
+.carousselImgMini {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    height: auto;
+    gap: 10px;
+    cursor: pointer;
+    user-select: none;
+    background-color: #e2dcdc;
+    padding-bottom: 15px;
+}
+
+.MiniCarousselImg {
+    height: 50px;
+    width: 50px;
+    border : 1px solid black;
+}
+
+.MiniCarousselImg:hover{
+    border: 2px solid black;
+    transition : 0.1s;
+}
+
+.allColors {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    user-select: none;
+    border: 1px solid black;
+    border-radius: 5px;
 
 }
 
-#carousselImg_size{
-    size: 100%;
+.allColors:hover{
+    border: 2px solid black;
+    transition : 0.1s;
+}
 
+
+.detailsColors{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
 #poubelle{
     height: 24px;
     width: 24px;
+    cursor: pointer;
+    user-select: none;
 }
 
 #poubelle:hover{
