--- a/style/style.css
+++ b/style/style.css
@@ -595,6 +595,7 @@ a{
     align-items: center;
     gap: 10px;
     margin-top: 141px;
+    margin-bottom: 175px;
 }
 
 .detailsCaroussel{
@@ -607,14 +608,98 @@ a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 477px;
-    width: 376px;
+    height: 583px;
+    width: 450px;
     gap: 25px;
+    border-right: #000000 1px solid;
+    padding-top: 100px;
 }
 
 .detailsTitle{
     font-size: large;
     font-weight: bold;
+}
+
+#outer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 550px;
+    gap: 25px;
+    background-color: #e2dcdc;
+    height: 150px;
+
+}
+
+#affaires{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    background-color: #e2dcdc;
+}
+
+.affaires_box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    height: 120px;
+    width: 120px;
+    border-radius: 5px;
+    cursor: pointer;
+    user-select: none;
+    gap:5px;
+}
+
+.moveDesc{
+    cursor: pointer;
+    user-select: none;
+    color: #006da4;
+    background: none;
+    border: none;
+    padding: 0;
+    font: inherit;
+    outline: inherit;
+}
+
+#plus{
+    max-width: 650px;
+    display: flex;
+    border: #eae7e4 1px solid;
+    padding: 15px;
+}
+#rose{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+    background-color: #ffb3c7;
+    height: 25px;
+    width: 65px;
+    border-radius: 5px;
+    margin-right:10px ;
+}
+
+.moveDesc:hover{
+    text-decoration: underline;
+    transition : 0.2s;
+    background: none;
+}
+
+.affaires_box:hover{
+    box-shadow: 0px 0px 10px 0px #000000;
+    transition : 0.2s;
+}
+
+.affaires_img{
+    height: 75px;
+    width: 75px;
+
 }
 
 .detailsPrice{
@@ -623,8 +708,18 @@ a{
 }
 
 .detailsColorName{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     font-size: medium;
+    width: 100%;
+    padding-top:50px;
+    border-top: #000000 1px solid;
+    
 }
+
+
 
 
 .ajout{
@@ -753,7 +848,13 @@ a{
 .detailsColors{
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     gap: 10px;
+    padding-bottom: 50px;
+    border-bottom: #000000 1px solid;
+    border-right: #000000;
 }
 
 #poubelle{
