--- a/style/style.css
+++ b/style/style.css
@@ -593,15 +593,16 @@ a{
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 10px;
     margin-top: 141px;
     margin-bottom: 175px;
+    
 }
 
 .detailsCaroussel{
     height: 583px;
     width: 843px;
     background-color: #fefefe;
+    border-right: #000000 1px solid;
 }
 
 .detailsInfo{
@@ -612,7 +613,53 @@ a{
     width: 450px;
     gap: 25px;
     border-right: #000000 1px solid;
-    padding-top: 100px;
+    padding-top: 50px;
+    background-color: white;
+}
+
+.detailsSize{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding-bottom: 5px;
+    border-bottom: #000000 1px solid;
+
+}
+#body{
+    background-color: grey;
+}
+
+
+.detailsDesc{
+    height:500px;
+    border-right: #000000 1px solid;
+    background-color: white;
+}
+
+
+
+.size{
+    padding: 10px;
+    border: #000000 1px solid;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    user-select: none;
+    transition: 0.4s;
+}
+
+.size:hover{
+    background-color: #000000;
+    color: white;
+    transition: 0.4s;
+}
+
+.size:checked{
+    background-color: #000000;
+    color: white;
 }
 
 .detailsTitle{
@@ -714,7 +761,7 @@ a{
     align-items: center;
     font-size: medium;
     width: 100%;
-    padding-top:50px;
+    padding-top:10px;
     border-top: #000000 1px solid;
     
 }
@@ -852,8 +899,7 @@ a{
     align-items: center;
     width: 100%;
     gap: 10px;
-    padding-bottom: 50px;
-    border-bottom: #000000 1px solid;
+    padding-bottom: 10px;
     border-right: #000000;
 }
 
