--- a/style/style.css
+++ b/style/style.css
@@ -597,6 +597,20 @@ a{
     margin-bottom: 175px;
     
 }
+.Filter{
+    display: flex;
+    background-color: #000000;
+    color: white;
+    border-radius: 100%;
+    height: 50px;
+    width: auto;
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+
 
 .detailsCaroussel{
     height: 583px;
