--- a/pages/style.css
+++ b/pages/style.css
@@ -81,10 +81,16 @@ background-size: contain;}
 }
 
 .sortList {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
     width: 100%;
     height: 150px;
-    background-color: red;
+    background-color: whitesmoke;
+    color : white;
     transition: 0.4s;
+    margin-bottom: 15px;
+    outline: #000000 1px solid;
 }
 .allSort{
     transition: 0.4s;
@@ -96,7 +102,26 @@ background-size: contain;}
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.price-btn-asc{
+    margin-right: 50px;
+}
+.price-btn-des ,.price-btn-asc{
+    margin-top: 10px;
+    border: 2px solid #000000;
+    color: black;
+    background-color: #ffffff;
+    border-radius: 5px;
+    cursor: pointer;
+    user-select: none;
+    transition: 0.4s;
+    
 
+}
+.price-btn-des:hover, .price-btn-asc:hover{
+    background-color: #000000;
+    color: #ffffff;
+    transition: 0.4s;
+}
 
 
 
