prob final push

--- a/style/style2.css
+++ b/style/style2.css
@@ -140,6 +140,16 @@ background-size: contain;}
     overflow: hidden;
 }
 
+.filtersdiv {
+    display: flex;
+    flex-direction: column;
+}
+
+.filterSort {
+    display: flex;
+    flex-direction: row;
+}
+
 .ctn-crocs{
     width: 100%;
     display: flex;
